XHR2 timeout property should allow late updates https://bugs.webkit.org/show_bug.cgi?id=98156

Reviewed by Darin Adler.

Source/WebCore:

Adding a timer within XMLHttpRequest to handle timeouts for asynchronous requests.
This allows easy update of the timeout even after request is sent.
Timeout is still handled by the network backend for synchronous requests (Web worker context).

Covered by updated tests.

* xml/XMLHttpRequest.cpp:
(WebCore::XMLHttpRequest::XMLHttpRequest): Adding timeout timer initialization.
(WebCore::XMLHttpRequest::setTimeout): Updating timeout timer state if request is sent.
(WebCore::XMLHttpRequest::createRequest): Starting timeout timer if needed.
(WebCore::XMLHttpRequest::internalAbort): Stopping timeout timer if needed.
(WebCore::XMLHttpRequest::didFail): Adding comment.
(WebCore::XMLHttpRequest::didFinishLoading): Stopping timeout timer if needed.
* xml/XMLHttpRequest.h:

LayoutTests:

Activating test checking that timeout can be updated after request is sent.

* http/tests/xmlhttprequest/timeout/xmlhttprequest-timeout-overrides-expected.txt:
* http/tests/xmlhttprequest/timeout/xmlhttprequest-timeout-overrides.js:
* http/tests/xmlhttprequest/timeout/xmlhttprequest-timeout-worker-overrides-expected.txt:


Canonical link: https://commits.webkit.org/166999@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189445 268f45cc-cd09-0410-ab3c-d52691b4dbfc